Added individual containers

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "delta_scraper"]
 	path = delta_scraper
 	url = https://github.com/JonasRSV/delta_scraper
+[submodule "www/delta_frontend"]
+	path = www/delta_frontend
+	url = https://github.com/Pranz/delta_frontend.git
