--- a/delta.config
+++ b/delta.config
@@ -1,6 +1,7 @@
 
 [database]
-host     = 192.168.10.223
+# host     = 192.168.10.223
+host     = database
 port     = 5432
 dbname   = delta
 user     = delta
