--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,34 @@
 version: '3'
 services: 
   database:
-    restart: always
-    build: database
-      context: database/
-      dockerfile: Dockerfile
+    #restart: always
+    #build: 
+      #context: database/
+      #dockerfile: Dockerfile
+    image: delta_database
     ports:
       - "5432:5432"
     volumes:
-      - database/volume:/var/lib/postgresq/data
+      - ./database/volume:/var/lib/postgresq/data
   scraper:
-    restart: always
-    build: 
-      context: delta_scraper/
-      dockerfile: Dockerfile
+    #restart: always
+    #build: 
+      #context: delta_scraper/
+      #dockerfile: Dockerfile
+    image: delta_scraper
     ports:
       - "8000:8000"
   website:
-    restart: always
-    build: 
-      context: www/
-      dockerfile: Dockerfile
+    #restart: always
+    #build: 
+      #context: www/
+      #dockerfile: Dockerfile
+    image: delta_proxy
   server:
-    restart: always
-    build:
-      context: .
-      dockerfile: Dockerfile
+    #restart: always
+    #build:
+      #context: .
+      #dockerfile: Dockerfile
+    image: delta_server
 
 
