--- a/delta.config
+++ b/delta.config
@@ -1,8 +1,11 @@
 
 [database]
-# host     = 192.168.10.223
-host     = database
+ host     = 192.168.10.223
+#host     = database
 port     = 5432
 dbname   = delta
 user     = delta
 password = 012
+
+[logs]
+server = logs/server.log
