--- a/server/server.config
+++ b/server/server.config
@@ -1,7 +1,7 @@
 
 [database]
- host     = 192.168.10.223
-#host     = database
+host     = 192.168.10.223
+# host     = database*/
 port     = 5432
 dbname   = delta
 user     = delta
@@ -9,3 +9,17 @@ password = 012
 
 [logs]
 server = logs/server.log
+
+[secret]
+jwt_private = secrets/private.pem
+jwt_public  = secrets/public.pem
+
+
+[jwt]
+ # Seconds
+expiration  = 7200
+
+
+[hash]
+key  = secrets/hash.key
+auth = 20
