--- a/server/server.config
+++ b/server/server.config
@@ -1,7 +1,7 @@
 
 [database]
 host     = 192.168.10.223
-# host     = database*/
+#host     = database
 port     = 5432
 dbname   = delta
 user     = delta
